vaultwarden/vaultwarden.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  clusterIP: None
  selector:
    app: vaultwarden
  ports:
  - port: 80
    name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  namespace: vaultwarden
  labels:
    app: vaultwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      restartPolicy: Always
      containers:
      - name: vaultwarden
        image: vaultwarden/server:latest
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: vaultwarden-volume
          mountPath: /data
      volumes:
      - name: vaultwarden-volume
        persistentVolumeClaim:
          claimName: vaultwarden-pvc
