vaultwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: traefik
  labels:
    app: vaultwarden
  name: vaultwarden-ingress
  namespace: vaultwarden
spec:
  rules:
  - host: vault.duti.dev
    http:
      paths:
      - backend:
          service:
            name: vaultwarden
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - vault.duti.dev
    secretName: vaultwarden-tls
